# WickedEngineCMake

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  WickedEngine.cmake
src/: CMakeLists.txt
src/sdl2/: main.cpp
src/win32/: TemplateWindows.rc  main.cpp
